<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="112dp"
                android:layout_height="77dp" app:srcCompat="@drawable/appicon" android:id="@+id/imageView2"
                android:contentDescription="TODO"/>
        <TextView
                android:text="PeleMele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textFontWeight="@android:integer/config_longAnimTime"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:backgroundTint="#009688" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="47dp">
        <Button
                android:text="@string/bonjour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/b1"
                android:backgroundTint="#FF9800"
                android:layout_marginTop="100dp"
                android:onClick="onClick" tools:ignore="TextContrastCheck"/>
        <Button
                android:text="@string/chronometre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/b3"
                android:backgroundTint="#4CAF50"
                android:layout_marginTop="20dp"
                tools:ignore="TextContrastCheck"
        />
        <Button
                android:text="@string/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/b2"
                android:backgroundTint="#3F51B5"
                android:layout_marginTop="20dp"
        />
        <Button
                android:text="@string/derniere_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/lastImage"
                android:backgroundTint="#E91E63" android:layout_marginTop="20dp"
                tools:ignore="TextContrastCheck"/>
        <Button
                android:text="@string/longueActivite"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content" android:id="@+id/longueActivite" android:backgroundTint="#FFEB3B"
                tools:ignore="TextContrastCheck"/>
        <Button
                android:text="@string/meteo"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content" android:id="@+id/meteo"
                android:backgroundTint="#673AB7"/>
        <Button
                android:text="@string/contacts"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/contacts" android:backgroundTint="#9C231A"/>
        <Button
                android:text="@string/capteur"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:backgroundTint="#56C1C6"
                android:layout_height="wrap_content" android:id="@+id/capteur" android:textColor="#37474F"/>
        <Button
                android:text="@string/selecteur"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:backgroundTint="#E7A1CA"
                android:layout_height="wrap_content" android:id="@+id/selecteur"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>